Implement P4 events replay
